tests/baselines/reference/asyncGenerators.classMethod.5.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.5.es5.ts(2,15): error TS1138: Parameter declaration expected.
tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.5.es5.ts(2,15): error TS2304: Cannot find name 'yield'.
tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.5.es5.ts(2,20): error TS1005: ';' expected.
tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.5.es5.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/asyncGenerators/es5/classMethods/asyncGenerators.classMethod.5.es5.ts (4 errors) ====
    class C {
        async * f(yield) {}
                  ~~~~~
!!! error TS1138: Parameter declaration expected.
                  ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                       ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.